Faith munyalo responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -1,39 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mount Kenya - A Natural Wonder</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>CSS Grid Challenge</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- DO NOT CHANGE ANYTHING IN THIS FILE -->
+        <header>Photo Gallery</header>
+        <div id="page-wrapper">
+            <div id="profile">
+                <span>Photographer Profile</span>
+                <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Photographing_sunrise_1745.jpg"
+                    alt="photographer capturing a sunset"
+                />
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Aliquam cumque autem magni quas modi! Voluptatibus earum
+                    iste nam sint unde odio, voluptates et tempora ab
+                    praesentium nihil eum porro excepturi.
+                </p>
+            </div>
 
-<header>
-    <h1>Mount Kenya</h1>
-    <p>Exploring the Beauty of Kenya's Iconic Peak</p>
-</header>
-
-<div class="container">
-    <h2>Introduction</h2>
-    <p>Mount Kenya is the second-highest mountain in Africa, standing tall at 5,199 meters. It is located in Kenya and holds great cultural and ecological significance. Designated as a UNESCO World Heritage Site, it is a key tourist attraction and an important natural landmark.</p>
-
-    <img src="mtkenya.jpeg" alt="Mount Kenya">
-
-    <h2>Interesting Facts</h2>
-    <ul>
-        <li>Mount Kenya has three main peaks: Batian, Nelion, and Lenana.</li>
-        <li>The mountain is a remnant of an ancient extinct volcano.</li>
-        <li>It is surrounded by lush forests, home to diverse wildlife like elephants, buffaloes, and monkeys.</li>
-        <li>The Kikuyu people revere Mount Kenya as sacred and call it "Kirinyaga," meaning "place of brightness."</li>
-    </ul>
-
-    <h2>Activities and Adventures</h2>
-    <p>Visitors can enjoy hiking, rock climbing, and exploring the unique flora and fauna. Popular routes for climbing include the Sirimon and Naro Moru trails, which provide breathtaking views of the surrounding landscapes.</p>
-</div>
-
-<footer>
-    <p>&copy; 2025 Exploring the Wonders of Kenya</p>
-</footer>
-
-</body>
-</html>
+            <div id="gallery">
+                <div class="card right">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card right">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card right">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card right">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+                <div class="card">
+                    <img
+                        src="ocean.jpg"
+                        alt="aerial shot of islands from the sea"
+                    />
+                    <span class="photo-label">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce consequat, dui ac condimentum finibus, orci.
+                    </span>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>keep this inmind
