--- a/code/blog-assignment/index.html
+++ b/code/blog-assignment/index.html
@@ -8,15 +8,19 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="blog-header">
+      <header id="header" class="blog-header">
         <div class="header-row">
           <div class="user-profile">
             <div class="profile-img">
               <img src="images/profile-pics.jpg" alt="profile-picture" />
             </div>
 
+            <span class="blog-menu">
+              <a href="index.html">Blog</a>
+            </span>
+
             <span class="profile-menu">
-              <a href="#">Profile</a>
+              <a href="profile.html">Profile</a>
             </span>
           </div>
 
@@ -32,7 +36,7 @@
         </div>
       </header>
 
-      <main>
+      <main id="main-content">
         <section class="blog-section">
           <h1>Recent Posts</h1>
           <div class="recent-post">
@@ -127,7 +131,7 @@
 
             <article class="blog">
               <div class="blog-post">
-                <img src="images/post-6.jpg" alt="user image" />
+                <img src="images/post-7.jpg" alt="user image" />
 
                 <div>
                   <h3>
@@ -147,11 +151,33 @@
                 </div>
               </div>
             </article>
+            <article class="blog">
+              <div class="blog-post">
+                <img src="images/post-12.png" alt="user image" />
+
+                <div>
+                  <h3>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Ea, eos! <span><a href="#">Read More</a></span>
+                  </h3>
+                  <div class="blog-footer">
+                    <div class="poster">
+                      <img src="images/mypost.jpg" alt="user image" />
+                    </div>
+
+                    <div class="blog-details">
+                      <span class="poster">John Doe</span>
+                      <span class="timestamp">Posted on January 7, 2025</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
           </div>
         </section>
       </main>
       <!-- Main Section Ends -->
-      <footer>
+      <footer id="footer">
         <p>&copy;2025, Augustine Stephen Abah</p>
       </footer>
     </div>
