update index.html and profile.html

--- a/code/blog-assignment/index.html
+++ b/code/blog-assignment/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Team Blog</title>
   </head>
@@ -26,7 +33,7 @@
 
           <div class="bio">
             <h3>My Bio</h3>
-            <span class="username">@username</span>
+            <span class="username">@Stynlytics</span>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Pariatur, velit laborum? Temporibus libero neque et eum possimus
@@ -166,8 +173,9 @@
                     </div>
 
                     <div class="blog-details">
-                      <span class="poster">John Doe</span>
+                      <span class="poster">Stynlytics</span>
                       <span class="timestamp">Posted on January 7, 2025</span>
+                      <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
                     </div>
                   </div>
                 </div>
