--- a/code/blog-assignment/profile.html
+++ b/code/blog-assignment/profile.html
@@ -29,7 +29,7 @@
 
           <div class="bio">
             <h3>My Bio</h3>
-            <span class="username">@username</span>
+            <span class="username">@Stynlytics</span>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Pariatur, velit laborum? Temporibus libero neque et eum possimus
