feat: add advanced css selector

--- a/code/02_css/05_advanced-css-selectors_custom-fonts/index.html
+++ b/code/02_css/05_advanced-css-selectors_custom-fonts/index.html
@@ -19,8 +19,10 @@
 
         <p>This  is a Paragraph to test Fonts</p>
 
-        
+
         <p>This  is a Paragraph to test Fonts</p>
+
+        <a href="">This is a link</a>
 
 
 
