final project html and css project

--- a/final project blog site/home.html
+++ b/final project blog site/home.html
@@ -12,8 +12,8 @@
         <div class="container">
             <h2>Welcome to My Blog</h2>
             <p>Your daily dose of inspiration, ideas, and stories. Dive into a world of creativity,<br> knowledge, and engaging content designed to brighten your day and expand your horizons.</p>
-            <a href="latest.html" class="button">Get Started</a>
-            <a href="login.html" class="button">login in</a>
+            <a href="login.html" class="button">Get Started</a>
+            <a href="latest.html" class="button">my profile</a>
         </div>
     </section>
     <header>
