started a new blog

--- a/blog-project/profile.html
+++ b/blog-project/profile.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="./stylesheets/profile.css">
     <title>Profile</title>
 </head>
 <body>
     <div class="container">
         <div class="welcome">
-            <a href="../home page/index.html">
+            <a href="./homepage.html">
                 <i class="bi bi-arrow-90deg-left"></i>
             </a>
             <p>Profile</p>
