added profile picture

--- a/code/blog-project/profile.html
+++ b/code/blog-project/profile.html
@@ -15,7 +15,7 @@
       </header>
       <main>
         <section class="profile-header">
-          <img src="profile-photo.jpg" alt="User 1 Profile Picture">
+          <img src="images/198520735_323032106092949_8951232071875405343_n.jpg" alt="User 1 Profile Picture">
           <h2>User 1</h2>
           <p>Hi! I love writing blogs about tech and personal development.</p>
         </section>
