faith munyalo grid assignment

--- a/code1/index.html
+++ b/code1/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>CSS Grid Challenge</title>
+        <title>CSS Grid Challenge-Faith Munyalo</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
