--- a/code/sherylann_html_css_finalproject/homepage.html
+++ b/code/sherylann_html_css_finalproject/homepage.html
@@ -56,7 +56,7 @@
       <div class="user-info">
         <img src="perosn3.jpeg" alt="User Icon" class="user-icon">
         <div>
-          <p class="username">Current User</p>
+          <p class="username">Jane P</p>
           <p class="timestamp">Just now</p>
         </div>
       </div>
