Solving come merge conflicts

--- a/code/html-css-final-project/index.html
+++ b/code/html-css-final-project/index.html
@@ -69,7 +69,7 @@
         <article>
             <div class="profile-section">
                 <div class="prof">
-                    <img src="images/logo.png" alt="profile picture">
+                    <img src="images/med5.jpg" alt="profile picture">
                     <div class="username">
                         <h2>Harry Lindelof</h2>
                         <h3>01/17/2025</h3>
@@ -83,7 +83,7 @@
         <article>
             <div class="profile-section">
                 <div class="prof">
-                    <img src="images/logo.png" alt="profile picture">
+                    <img src="images/med4.jpg" alt="profile picture">
                         <div class="username">
                         <h2>Jonh Terry</h2>
                     <h3>01/16/2025</h3>
@@ -97,7 +97,7 @@
          <article>
             <div class="profile-section">
                 <div class="prof">
-                    <img src="images/logo.png" alt="profile picture">
+                    <img src="images/med3.jpg" alt="profile picture">
                     <div class="username">
                         <h2>Nicki Beyonce</h2>
                         <h3>01/15/2025</h3>
@@ -111,7 +111,7 @@
          <article>
             <div class="profile-section">
                 <div class="prof">
-                    <img src="images/logo.png" alt="profile picture">
+                    <img src="images/med2.jpg" alt="profile picture">
                     <div class="username">
                         <h2>Sylvester stallone</h2>
                         <h3>01/13/2025</h3>
@@ -125,7 +125,7 @@
          <article>
             <div class="profile-section">
                 <div class="prof">
-                    <img src="images/logo.png" alt="profile picture">
+                    <img src="images/med1.jpg" alt="profile picture">
                     <div class="username">
                         <h2>Paul Forest</h2>
                         <h3>01/11/2025</h3>
@@ -140,7 +140,7 @@
          <article>
             <div class="profile-section">
                 <div class="prof">
-                    <img src="images/logo.png" alt="profile picture">
+                    <img src="images/med10.jpg" alt="profile picture">
                     <div class="username">
                         <h2>Jane Washingtone</h2>
                         <h3>01/10/2025</h3>
