made changes to the project files and git to ignore some files

--- a/code/html-css-final-project/profile.html
+++ b/code/html-css-final-project/profile.html
@@ -81,7 +81,7 @@
             <div class="prof">
                 <img src="images/logo.png" alt="profile picture">
                 <div class="username">
-                    <h2>Ella Toone</h2>
+                    <h2>Doctor Eugene Gustavo</h2>
                     <h3>01/19/2025</h3>
                 </div>
             </div>
