--- a/code/html-css/html-assignment-1/ado-awaye.html
+++ b/code/html-css/html-assignment-1/ado-awaye.html
@@ -98,7 +98,7 @@
     <img src="images/the-suspended-lake-at.jpg" alt="photo3" style="width:100%">
     </div>
     <div class="column">
-    <img src="images/tree.jpg" alt="photo4" style="width:100%">
+    <img src="images/ese-awon-agba.jpg" alt="photo4" style="width:100%">
 
     </div>
 
