add final version code

--- a/code/WebAPIs/WebAPI-assignment2/index.html
+++ b/code/WebAPIs/WebAPI-assignment2/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
   <main>
-    <h1>To-do list</h1>
+    <h1>To-do list</h1> 
+    <label for="options">Choose a user:</label>
+    <select name="userId" id="userOption">
+      <option value="1">User 1</option>
+      <option value="2">User 2</option>
+      <option value="3">User 3</option>
+      <option value="4">User 4</option>
+      <option value="5">User 5</option>
+      <option value="6">User 6</option>
+      <option value="7">User 7</option>
+      <option value="8">User 8</option>
+      <option value="9">User 9</option>
+      <option value="10">User 10</option>
+    </select>
     <ul id="to-do-list"></ul>
   </main>
 
