--- a/code/WebAPIs/WebAPI-final-project/profile.html
+++ b/code/WebAPIs/WebAPI-final-project/profile.html
@@ -12,7 +12,7 @@
 
   <!-- main styles -->
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="styles2.css">
+  <link rel="stylesheet" href="profile.css">
   
   <title>Profile page</title>
 </head>
@@ -141,5 +141,7 @@
       <a href="index.html"> Back to Homepage</a>
     </button>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
