add blog project update

--- a/code/html-css/blog-project/profile.html
+++ b/code/html-css/blog-project/profile.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/profile.css">
     <title>Profile</title>
+    <script defer src="profile.js"></script>
 </head>
 <body>
     <div class="container">
@@ -24,32 +25,32 @@
                 alt="user"/>
             <div class="form-group">
                 <label class="label" for="full-name">Full Name</label>
-                <input type="text" id="full-name" class="text-input" placeholder="Owen Iraoya">
+<!--                <input type="text" id="full-name" class="text-input" placeholder="Owen Iraoya">-->
             </div>
-            <div class="form-group">
-                <label class="label" for="gender">Gender</label>
-                <input type="text" id="gender" class="text-input" placeholder="Male">
-            </div>
+<!--            <div class="form-group">-->
+<!--                <label class="label" for="gender">Gender</label>-->
+<!--&lt;!&ndash;                <input type="text" id="gender" class="text-input" placeholder="Male">&ndash;&gt;-->
+<!--            </div>-->
             <div class="form-group">
                 <label class="label" for="address">Address</label>
-                <input type="text" id="address" class="text-input" placeholder="Lokogoma, Abuja">
+<!--                <input type="text" id="address" class="text-input" placeholder="Lokogoma, Abuja">-->
             </div>
             <div class="form-group">
                 <label class="label" for="bio">Bio</label>
-                <textarea id="bio" class="textarea" placeholder="Lover of music, sports, dance and podcast. I am just a guy that fell in lobe with life"></textarea>
+<!--                <textarea id="bio" class="textarea" placeholder="Lover of music, sports, dance and podcast. I am just a guy that fell in lobe with life"></textarea>-->
             </div>
             <button>Save</button>
         </form>
         <div class="lastcontent">
-            <h4>Owen's recent posts:</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quo doloremque aperiam minima fugit nemo ab accusantium facilis assumenda voluptates natus, perferendis rerum. Molestias quas fuga temporibus et? Maiores, magnam!
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro nostrum sint quae voluptate possimus at recusandae dolorem maiores. Aliquid, soluta quo. Veniam facilis deserunt nihil quaerat, qui temporibus consequuntur dolorum?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga id voluptate aspernatur numquam totam atque, fugit voluptatibus quibusdam officiis blanditiis laboriosam voluptatem error ipsa ad architecto, incidunt quidem, sit iusto?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae numquam sed alias maxime, est ab architecto rem tempora ipsam quaerat optio accusantium illum cumque repellendus natus, impedit vel eum iste.
-            </p>
+            <h4>Your articles:</h4>
+<!--            <p>-->
+<!--                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quo doloremque aperiam minima fugit nemo ab accusantium facilis assumenda voluptates natus, perferendis rerum. Molestias quas fuga temporibus et? Maiores, magnam!-->
+<!--                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro nostrum sint quae voluptate possimus at recusandae dolorem maiores. Aliquid, soluta quo. Veniam facilis deserunt nihil quaerat, qui temporibus consequuntur dolorum?-->
+<!--            </p>-->
+<!--            <p>-->
+<!--                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga id voluptate aspernatur numquam totam atque, fugit voluptatibus quibusdam officiis blanditiis laboriosam voluptatem error ipsa ad architecto, incidunt quidem, sit iusto?-->
+<!--                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae numquam sed alias maxime, est ab architecto rem tempora ipsam quaerat optio accusantium illum cumque repellendus natus, impedit vel eum iste.-->
+<!--            </p>-->
         </div>
     </div>
 </body>
