--- a/code/Web API/index.html
+++ b/code/Web API/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        li {
-            list-style: none;
-            padding: 8px;
-            margin: 5px 0;
-            border-bottom: 1px solid #ddd;
-        }
-        .completed {
-            text-decoration: line-through;
-            color: gray;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Bloom</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <div class="logo-container">
+      <h1>BLOOM</h1>
+    </div>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="profile.html">Profile</a>
+    </nav>
+  </header>
 
-    <h1>User 1's To-Do List</h1>
-    <ul id="to-do-list"></ul>
+  <main class="home">
+    <h1>Recent Posts</h1>
+    <section class="posts-container">
+      <!-- Blog posts will be dynamically inserted here by script.js -->
+    </section>
+  </main>
 
-    <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2025 BLOOM</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
