--- a/code/Web API/profile.html
+++ b/code/Web API/profile.html
@@ -1,35 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="style1.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kevin Yegon - Profile</title>
+    <link rel="stylesheet" href="style1.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-    <header>
-        <h1>Enlighten Me</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <style>
+      /* Smooth scrolling */
+      html {
+        scroll-behavior: smooth;
+      }
 
-    <main>
-        <section>
-            <h2>About Us</h2>
-            <p>We offer  digital solutions,web-design,marketing.</p>
-        </section>
-    </main>
+      /* Navigation Bar */
+      nav {
+        text-align: center;
+        background: #007bff;
+        padding: 10px 0;
+      }
 
-    <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
-    </footer>
+      nav ul {
+        list-style: none;
+        padding: 0;
+      }
 
-</body>
+      nav ul li {
+        display: inline;
+        margin: 0 15px;
+      }
+
+      nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: bold;
+      }
+
+      /* About Section */
+      .about {
+        text-align: center;
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background: white;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+      }
+
+      .about h2 {
+        color: #007bff;
+      }
+
+      .about p {
+        font-size: 16px;
+        color: #333;
+      }
+
+      /* Social Links */
+      .social-links {
+        text-align: center;
+        margin-top: 30px;
+      }
+
+      .social-links a {
+        margin: 0 15px;
+        text-decoration: none;
+        font-size: 24px;
+      }
+
+      .social-links .fab {
+        color: #007bff;
+        transition: transform 0.3s ease;
+      }
+
+      .social-links .fab:hover {
+        transform: scale(1.2);
+      }
+    </style>
+  </head>
+  <body>
+
+    <!-- Navigation -->
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Profile Card -->
+    <div class="card">
+      <div class="imgBx">
+        <img src="images/npy (1).jpg" alt="Kevin Yegon Profile">
+      </div>
+      <div class="content">
+        <div class="details">
+          <h2>Kevin Yegon<br /><span>Junior Dev</span></h2>
+          <div class="data">
+            <h3>58<br /><span>Posts</span></h3>
+            <h3>2,859<br /><span>Followers</span></h3>
+            <h3>40<br /><span>Following</span></h3>
+          </div>
+          <div class="actionBtn">
+            <button>Follow</button>
+            <button>Message</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- About Section -->
+    <div class="about" id="about">
+      <h2>About Me</h2>
+      <p>
+        Hey there! I'm Kevin Yegon, a passionate <strong>web developer</strong> who thrives on turning ideas into reality.  
+        Whether it's crafting sleek user interfaces or building efficient backends, I love bringing projects to life.  
+        Always learning, always coding. 🚀
+      </p>
+    </div>
+
+    <!-- Social Media Links -->
+    <div class="social-links" id="contact">
+      <a href="https://github.com/yourgithub" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://instagram.com/yourinstagram" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://wa.me/yourwhatsappnumber" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+
+  </body>
 </html>
