--- a/code/javascript/final-assignment/index.html
+++ b/code/javascript/final-assignment/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess The Number Game</title>
+    <title>Guess The Number</title>
 </head>
 <body>
     <h1>Guess The Number Game</h1>
+    <button onclick="startGame()">Start Game</button>
+
+    <!-- Link to the external JavaScript file -->
     <script src="game.js"></script>
 </body>
 </html>
