--- a/code/html-css/blog-project/public/index.html
+++ b/code/html-css/blog-project/public/index.html
@@ -10,23 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
           rel="stylesheet">
     <script defer src="app.js"></script>
-    <link href="./stylesheets/homepage.css" rel="stylesheet">
+    <link href="stylesheets/homepage.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <header class="header">
         <h1>Food Articles</h1>
-        <a href="./profile.html">
+        <a href="profile.html">
             <i class="bi bi-person-circle profile-icon"></i>
         </a>
     </header>
 
     <div id="hero">
         <picture>
-            <source media="(max-width: 575px)" srcset="./components/575.jpg">
-            <source media="(max-width: 900px)" srcset="./components/900.jpg">
-            <source media="(max-width: 1024px)" srcset="./components/1024.jpg">
-            <img alt="A beautiful food banner" height="auto" src="./components/mainPic.jpg" width="100%">
+            <source media="(max-width: 575px)" srcset="components/575.jpg">
+            <source media="(max-width: 900px)" srcset="components/900.jpg">
+            <source media="(max-width: 1024px)" srcset="components/1024.jpg">
+            <img alt="A beautiful food banner" height="auto" src="components/mainPic.jpg" width="100%">
         </picture>
     </div>
 
@@ -51,7 +51,6 @@
                 <div class="article-meta">
 <!--                    <span>11/12/2025 9:05</span>-->
                 </div>
-                <span>11/12/2025 9:05</span>
 
             </div>
         </article>
@@ -66,7 +65,6 @@
                 <div class="article-meta">
 <!--                    <span>11/12/2025 9:05</span>-->
                 </div>
-                <span>11/12/2025 9:05</span>
 
             </div>
         </article>
@@ -80,7 +78,6 @@
                 <div class="article-meta">
 <!--                    <span>11/12/2025 9:05</span>-->
                 </div>
-                <span>11/12/2025 9:05</span>
 
             </div>
         </article>
@@ -95,7 +92,6 @@
 <!--                    <span>By Jose Maurinho</span>-->
 <!--                    <span>11/12/2025 9:05</span>-->
                 </div>
-                <span>11/12/2025 9:05</span>
 
             </div>
         </article>
@@ -109,7 +105,6 @@
                 <div class="article-meta">
 
                 </div>
-                <span>11/12/2025 9:05</span>
 
             </div>
         </article>
@@ -120,7 +115,7 @@
 
                 <div class="article-meta">
                 </div>
-                <span>11/12/2025 9:05</span>
+
 
             </div>
         </article>
