--- a/code/Dark-mode/public/index.html
+++ b/code/Dark-mode/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Light/Dark Mode</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1 id="banner">Light Mode</h1>
