--- a/3-web-apis/inherent-events/index.html
+++ b/3-web-apis/inherent-events/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forms & Inherent Events</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
+    <script src="server.js" defer></script>
   </head>
   <body>
     <!-- 
