--- a/code/web-api/Web Api Assignment/index.html
+++ b/code/web-api/Web Api Assignment/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Api Assignment</title>
-    <script defer src="app.js"></script>
+    <script defer src="server.js"></script>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
