--- a/code/web-api/Web Api/index.html
+++ b/code/web-api/Web Api/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<script defer src="app.js"></script>
+<script defer src="server.js"></script>
 <body>
 <div class="container">
     <div id="contents">
