added some modifications to the final project

--- a/code/html-css-final-project/profile.html
+++ b/code/html-css-final-project/profile.html
@@ -5,6 +5,7 @@
     <meta Doctor Eugene Gustavo="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
     <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- --------------------------------iconscout cdn -->
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
@@ -74,6 +75,11 @@
             </div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, rem.</p>
             <img src="images/med7.jpg" alt="Post Image">
+            <div class="comments-section">
+                <i class="uil uil-thumbs-up">Likes</i>
+                <i class="uil uil-comment">Comments</i>
+                <i class="uil uil-share">Share</i>
+            </div>
     
     </section>
     <section>
@@ -87,6 +93,11 @@
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et blanditiis, officia deserunt doloremque nostrum nihil quas pariatur repellendus consequuntur. Nesciunt.</p>
             <img src="images/med6.jpg" alt="">
+            <div class="comments-section">
+                <i class="uil uil-thumbs-up">Likes</i>
+                <i class="uil uil-comment">Comments</i>
+                <i class="uil uil-share">Share</i>
+            </div>
     
     </section>
 
@@ -100,6 +111,11 @@
             </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, ullam. Totam, vitae ab. Unde voluptatibus illum laborum quaerat minus veniam atque quae aliquam ipsa maiores laudantium quidem, sit inventore doloribus?</p>
             <img src="images/med8.jpg" alt="Post Image">
+            <div class="comments-section">
+                <i class="uil uil-thumbs-up">Likes</i>
+                <i class="uil uil-comment">Comments</i>
+                <i class="uil uil-share">Share</i>
+            </div>
     </section>
 
     <section>
@@ -112,6 +128,11 @@
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio deserunt nam nihil fugiat, tenetur deleniti iusto cumque vero quibusdam odit!</p>
         <img src="images/med9.jpg" alt="Post Image">
+        <div class="comments-section">
+            <i class="uil uil-thumbs-up">Likes</i>
+            <i class="uil uil-comment">Comments</i>
+            <i class="uil uil-share">Share</i>
+        </div>
     </section>
 
     <section>
@@ -124,6 +145,11 @@
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ratione hic quod quasi non, modi nobis ab. Illo officia rem iure totam assumenda non odit distinctio consequuntur, vel veritatis harum ea fugiat dolorum ad ducimus, ipsum quaerat tempora dolores. Error!</p>
         <img src="images/med10.jpg" alt="Post Image">
+        <div class="comments-section">
+            <i class="uil uil-thumbs-up">Likes</i>
+            <i class="uil uil-comment">Comments</i>
+            <i class="uil uil-share">Share</i>
+        </div>
     </section>
 
     <section>
@@ -138,6 +164,12 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ducimus, cumque quaerat, praesentium neque dolor nostrum, odit consequuntur qui placeat at accusamus animi tenetur perspiciatis. Eaque odit vero ipsa itaque ut dolor quas incidunt ea.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eligendi ducimus ipsam? Assumenda voluptas accusantium nesciunt repellat iste earum, amet officia. Neque nemo soluta consequatur error natus totam ipsum corporis in, ratione magni, consectetur nostrum.</p>
         <img src="images/med6.jpg" alt="Post Image">
+
+        <div class="comments-section">
+        <i class="uil uil-thumbs-up">Likes</i>
+        <i class="uil uil-comment">Comments</i>
+        <i class="uil uil-share">Share</i>
+        </div>
     </section>
 </body>
 </html>
