improved the layout to separate the sidebar and main section

--- a/code/html-css-final-project/index.html
+++ b/code/html-css-final-project/index.html
@@ -46,14 +46,14 @@
 
         <div class="sidebar">
             <span class="profile-details">
-                <img src="images/logo.png" alt="Profile Picture">
+                <img src="images/logo.png" alt="Profile Picture" class="profile-pic">
                 <h2>Doctor Eugene Gustavo</h2>
                 <p>Oceanic Hospital</p>
-                <button>Following</button>
-                <button>Followers</button>
+                <!-- <button>Following</button>
+                <button>Followers</button> -->
             </span>
             <ul>
-                <li class="active"><i class="uil uil-estate "> </i><a href="index.html">Home</a></li>
+                <li><i class="uil uil-estate "> </i><a href="index.html" class="active">Home</a></li>
                 <li><i class="uil uil-comments"></i><a href="#">Community</a></li>
                 <li><i class="uil uil-fire"></i><a href="#">Trending</a></li>
                 <li><i class="uil uil-question-circle"></i><a href="#">FAQs</a></li>
@@ -68,7 +68,7 @@
 
 
  <!-- *****************The Main Section*********************** -->       
-    <section>
+    <section class="content-section">
 
         <div class="search-bar">
                 <div id="search">
