--- a/code/html-css/blog-project/public/profile.html
+++ b/code/html-css/blog-project/public/profile.html
@@ -1,57 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/profile.css">
-    <title>Profile</title>
-    <script defer src="profile.js"></script>
+    <link rel="stylesheet" href="./stylesheets/profile.css">
+    <title>Profile Settings</title>
 </head>
-<body>
-    <div class="container">
-        <div class="welcome">
-            <a href="index.html">
-                <i class="bi bi-arrow-90deg-left"></i>
-            </a>
-            <p>Profile</p>
+<body class="bg-gray-50 min-h-screen">
+<div class="container mx-auto px-4 py-6 max-w-4xl">
+    <!-- Header with Back Button -->
+    <header class="flex items-center mb-6">
+        <a href="index.html" class="mr-4 text-blue-600 hover:text-blue-800 transition-colors">
+            <i class="bi bi-arrow-left-circle-fill text-3xl"></i>
+        </a>
+        <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Profile Settings</h1>
+    </header>
+
+    <!-- Profile Card -->
+    <div class="bg-white rounded-xl shadow-sm overflow-hidden border border-gray-100">
+        <!-- Profile Header with Avatar -->
+        <div class="bg-gradient-to-r from-red-400 to-red-500 p-6 text-center relative">
+            <div class="absolute top-4 right-4">
+                <button class="bg-white/20 hover:bg-white/30 backdrop-blur-sm text-white rounded-full p-2 transition-all">
+                    <i class="bi bi-camera-fill text-lg"></i>
+                </button>
+            </div>
+            <div class="relative inline-block">
+                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Profile Picture"
+                     class="w-20 h-20 md:w-24 md:h-24 rounded-full border-4 border-white/80 object-cover shadow-md">
+            </div>
+            <h2 class="mt-4 text-xl md:text-2xl font-semibold text-white">John Doe</h2>
+            <p class="text-red-100 text-sm md:text-base">john.doe@example.com</p>
         </div>
-        <form class="profile-content">
-            <img class="img" 
-                src="https://images.pexels.com/photos/4144179/pexels-photo-4144179.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                alt="user"/>
-            <div class="form-group">
-                <label class="label" for="full-name">Full Name</label>
-<!--                <input type="text" id="full-name" class="text-input" placeholder="Owen Iraoya">-->
+
+        <!-- Profile Form -->
+        <form class="p-6">
+            <!-- Full Name Field -->
+            <div class="mb-6">
+                <label for="fullname" class="block text-gray-700 font-medium mb-2 flex items-center">
+                    <i class="bi bi-person-fill mr-2 text-red-500"></i>Full Name
+                </label>
+                <div class="relative">
+                    <input type="text" id="fullname" name="fullname"
+                           class="w-full px-4 py-3 pl-10 border border-gray-200 rounded-lg focus:ring-2 focus:ring-red-400 focus:border-red-400 transition-all placeholder-gray-400"
+                           placeholder="Enter your full name" value="John Doe">
+                    <i class="bi bi-person absolute left-3 top-3.5 text-gray-400"></i>
+                </div>
             </div>
-<!--            <div class="form-group">-->
-<!--                <label class="label" for="gender">Gender</label>-->
-<!--&lt;!&ndash;                <input type="text" id="gender" class="text-input" placeholder="Male">&ndash;&gt;-->
-<!--            </div>-->
-            <div class="form-group">
-                <label class="label" for="address">Address</label>
-<!--                <input type="text" id="address" class="text-input" placeholder="Lokogoma, Abuja">-->
+
+            <!-- Bio Field -->
+            <div class="mb-6">
+                <label for="bio" class="block text-gray-700 font-medium mb-2 flex items-center">
+                    <i class="bi bi-pencil-fill mr-2 text-red-500"></i>Bio
+                </label>
+                <div class="relative">
+                    <textarea id="bio" name="bio" rows="3"
+                              class="w-full px-4 py-3 pl-10 border border-gray-200 rounded-lg focus:ring-2 focus:ring-red-400 focus:border-red-400 transition-all placeholder-gray-400"
+                              placeholder="Tell us about yourself">Digital designer & developer focused on creating beautiful interfaces.</textarea>
+                    <i class="bi bi-pencil absolute left-3 top-3.5 text-gray-400"></i>
+                </div>
             </div>
-            <div class="form-group">
-                <label class="label" for="bio">Bio</label>
-<!--                <textarea id="bio" class="textarea" placeholder="Lover of music, sports, dance and podcast. I am just a guy that fell in lobe with life"></textarea>-->
+
+            <!-- Address Field -->
+            <div class="mb-8">
+                <label for="address" class="block text-gray-700 font-medium mb-2 flex items-center">
+                    <i class="bi bi-geo-alt-fill mr-2 text-red-500"></i>Address
+                </label>
+                <div class="relative">
+                    <textarea id="address" name="address" rows="2"
+                              class="w-full px-4 py-3 pl-10 border border-gray-200 rounded-lg focus:ring-2 focus:ring-red-400 focus:border-red-400 transition-all placeholder-gray-400"
+                              placeholder="Enter your address">123 Main St, Apt 4B
+New York, NY 10001</textarea>
+                    <i class="bi bi-geo-alt absolute left-3 top-3.5 text-gray-400"></i>
+                </div>
             </div>
-            <button>Save</button>
+
+            <!-- Action Buttons -->
+            <div class="flex flex-col sm:flex-row justify-between gap-4">
+                <a href="articles.html" type="button"
+                        class="bg-gray-100 hover:bg-gray-200 text-gray-800 font-medium py-3 px-6 rounded-lg flex items-center justify-center transition-colors border border-gray-200">
+                    <i class="bi bi-file-earmark-text mr-2"></i> See My Articles
+                </a>
+                <button type="submit"
+                        class="bg-red-500 hover:bg-red-600 text-white font-medium py-3 px-6 rounded-lg flex items-center justify-center transition-colors shadow-sm">
+                    <i class="bi bi-check-circle-fill mr-2"></i> Create Account
+                </button>
+            </div>
         </form>
-        <div class="lastcontent">
-            <h4>Your articles:</h4>
-<!--            <p>-->
-<!--                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quo doloremque aperiam minima fugit nemo ab accusantium facilis assumenda voluptates natus, perferendis rerum. Molestias quas fuga temporibus et? Maiores, magnam!-->
-<!--                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro nostrum sint quae voluptate possimus at recusandae dolorem maiores. Aliquid, soluta quo. Veniam facilis deserunt nihil quaerat, qui temporibus consequuntur dolorum?-->
-<!--            </p>-->
-<!--            <p>-->
-<!--                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga id voluptate aspernatur numquam totam atque, fugit voluptatibus quibusdam officiis blanditiis laboriosam voluptatem error ipsa ad architecto, incidunt quidem, sit iusto?-->
-<!--                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae numquam sed alias maxime, est ab architecto rem tempora ipsam quaerat optio accusantium illum cumque repellendus natus, impedit vel eum iste.-->
-<!--            </p>-->
+    </div>
+
+    <!-- Stats Section -->
+    <div class="mt-6 grid grid-cols-2 md:grid-cols-4 gap-4">
+        <div class="bg-white p-4 rounded-xl border border-gray-100 text-center">
+            <div class="text-gray-500 text-sm">Articles</div>
+            <div class="text-2xl font-bold text-red-500">24</div>
+        </div>
+        <div class="bg-white p-4 rounded-xl border border-gray-100 text-center">
+            <div class="text-gray-500 text-sm">Followers</div>
+            <div class="text-2xl font-bold text-red-500">1.2K</div>
+        </div>
+        <div class="bg-white p-4 rounded-xl border border-gray-100 text-center">
+            <div class="text-gray-500 text-sm">Following</div>
+            <div class="text-2xl font-bold text-red-500">356</div>
+        </div>
+        <div class="bg-white p-4 rounded-xl border border-gray-100 text-center">
+            <div class="text-gray-500 text-sm">Joined</div>
+            <div class="text-2xl font-bold text-red-500">2020</div>
         </div>
     </div>
+</div>
+
+
+    <script defer src="./profile.js"></script>
 </body>
 </html>
