add final version

--- a/code/server/server-final-project/public/profile.html
+++ b/code/server/server-final-project/public/profile.html
@@ -24,7 +24,7 @@
   </header>
 
   <aside class="sideBar1">
-    <button> <a href="index.html">Back to Homepage</a></button>
+    <button> <a href="/posts">Back to Homepage</a></button>
     <button>Filter</button>
     <button>Popular Today</button>
     <button> rules</button>
@@ -44,7 +44,7 @@
     </button>
     <div class="profileSec">
       <button>
-        <a href="index.html">Back to Homepage</a>
+        <a href="posts">Back to Homepage</a>
       </button>
     </div>
   </aside>
@@ -138,7 +138,7 @@
 
   <footer>
     <button> 
-      <a href="index.html"> Back to Homepage</a>
+      <a href="/posts"> Back to Homepage</a>
     </button>
   </footer>
 
