--- a/code/index.html
+++ b/code/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dark/Light Mode Toggle</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>To-Do List Fetcher</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1 id="banner">Light Mode</h1>
-  <button id="toggle-btn">Switch to Dark Mode</button>
+  <h1>User's To-Do List</h1>
+
+  <label for="user-select">Choose User (1–10):</label>
+  <input type="number" id="user-select" min="1" max="10" value="1" />
+
+  <ul id="to-do-list"></ul>
 
   <script src="app.js"></script>
 </body>
